# memory-system

./: .gitignore  PROGRESS.md  README.md  package-lock.json
.pi/: settings.json
memory/: .gitignore  README.md
memory/docs/: README.md  (+2 more)
memory/memory-consolidator/: PLAN-GEN1.md  README.md  pyproject.toml
memory/memory-consolidator/src/memory_consolidator/: __init__.py  cli.py  consolidator.py  database.py  promoter.py  schema.py
memory/memory-consolidator/tests/: test_consolidator.py
memory/memory-consolidator/tests/fixtures/: test-candidate-2.md  test-candidate.md
memory/memory-inbox/: PROGRESS.md  README.md  pyproject.toml
memory/memory-inbox/docs/: product-decision.md  repeatable-evaluation.md
memory/memory-inbox/examples/: README.md
memory/memory-inbox/src/: README.md
memory/memory-inbox/src/memory_inbox/: __init__.py  candidates.py  capture.py  cli.py  markdown.py  pi_adapter.py  scenarios.py  schema.py  tracing.py
memory/memory-inbox/tests/: README.md  test_candidates.py  test_capture.py  test_pi_adapter.py  test_scenarios.py  test_schema.py
memory/memory-inbox/tests/scenarios/: README.md
memory/memory-inbox/tests/scenarios/001-explicit-user-sandbox-permission/: expected.yaml  input.md
memory/memory-inbox/tests/scenarios/002-secret-like-capture-first/: expected.yaml  input.md
memory/memory-inbox/tests/scenarios/003-precompaction-session-summary/: expected.yaml  input.md
research/: local-agentic-memory-landscape.md  memory-system-critical-review.md
tasks/: consolidator-gen1-implementation.md  context-window-probe-extension.md
(+17 files in other folders)
