[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-consolidator"
version = "0.1.0"
description = "Gen1 memory consolidator: candidates → SQLite → FTS5 retrieval"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
memory-consolidator = "memory_consolidator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
