[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-inbox"
version = "0.1.0"
description = "YOLO capture-first candidate memory inbox for the pi sandbox"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
memory-inbox = "memory_inbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
